修改了MutableConfig